<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="locale">en</string>
    <string name="url_privacy_notice">https://www.gov.uk/government/publications/nhs-covid-19-app-privacy-information</string>
    <string name="url_terms_of_use">https://www.gov.uk/government/publications/nhs-covid-19-app-privacy-information/nhs-covid-19-app-terms-of-use</string>
    <string name="url_exposure_faqs">https://www.gov.uk/government/collections/nhs-covid-19-app</string>
    <string name="url_nhs_111_online">https://111.nhs.uk/</string>
    <string name="url_accessibility_statement">https://www.gov.uk/guidance/nhs-covid-19-app-accessibility</string>
    <string name="url_postal_code_risk_more_info">https://www.gov.uk/government/publications/covid-19-response-living-with-covid-19</string>
    <string name="url_how_app_works">https://www.gov.uk/government/collections/nhs-covid-19-app</string>
    <string name="url_common_questions">https://www.gov.uk/government/collections/nhs-covid-19-app</string>
    <string name="url_latest_advice">https://www.nhs.uk/conditions/coronavirus-covid-19/testing/</string>
    <string name="url_latest_advice_in_isolation">https://www.gov.uk/government/publications/covid-19-response-living-with-covid-19</string>
    <string name="url_order_test_privacy">https://www.gov.uk/government/publications/coronavirus-covid-19-testing-privacy-information</string>
    <string name="url_order_test_for_someone_else">https://www.nhs.uk/conditions/coronavirus-covid-19/testing/</string>
    <string name="url_provide_feedback">https://enquiries.test-and-trace.nhs.uk</string>
    <string name="url_local_authority">https://www.gov.uk/find-local-council</string>
    <string name="url_latest_government_guidance">https://www.gov.uk/guidance/people-with-symptoms-of-a-respiratory-infection-including-covid-19</string>
    <string name="url_nhs_guidance">https://www.nhs.uk/conditions/coronavirus-covid-19/</string>
    <string name="url_privacy_notice_wls">https://www.gov.uk/government/publications/nhs-covid-19-app-privacy-information</string>
    <string name="url_terms_of_use_wls">https://www.gov.uk/government/publications/nhs-covid-19-app-privacy-information/nhs-covid-19-app-terms-of-use</string>
    <string name="url_nhs_111_online_wls">https://111.wales.nhs.uk/</string>
    <string name="url_accessibility_statement_wls">https://www.gov.uk/guidance/nhs-covid-19-app-accessibility</string>
    <string name="url_postal_code_risk_more_info_wls">https://www.gov.uk/government/publications/covid-19-response-living-with-covid-19</string>
    <string name="url_how_app_works_wls">https://www.gov.uk/government/collections/nhs-covid-19-app</string>
    <string name="url_common_questions_wls">https://www.gov.uk/government/collections/nhs-covid-19-app</string>
    <string name="url_latest_advice_wls">https://gov.wales/coronavirus</string>
    <string name="url_latest_advice_in_isolation_wls">https://www.gov.uk/government/publications/covid-19-response-living-with-covid-19</string>
    <string name="url_order_test_privacy_wls">https://www.gov.uk/government/publications/coronavirus-covid-19-testing-privacy-information</string>
    <string name="url_order_test_for_someone_else_wls">https://www.nhs.uk/conditions/coronavirus-covid-19/testing/</string>
    <string name="url_latest_government_guidance_wls">https://gov.wales/self-isolation</string>
    <string formatted="false" name="url_nhs_guidance_wls">https://111.wales.nhs.uk/encyclopaedia/c/article/coronavirus(covid19)/</string>
    <string name="get_tested_wales_link_url">https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests</string>
    <plurals name="state_isolation_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="isolation_days_to_go">
        <item quantity="one">day to go</item>
        <item quantity="other">days to go</item>
    </plurals>
    <plurals name="isolation_view_accessibility_description">
        <item quantity="one">Self-isolate until %1$s at 23:59. There is %2$s day to go until then.</item>
        <item quantity="other">Self-isolate until %1$s at 23:59. There are %2$s days to go until then.</item>
    </plurals>
    <plurals name="resume_contact_tracing_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="logo_nhs_england_description">NHS Covid 19 app</string>
    <string name="covid_guidance_hub_for_england_title">Guidance on living with COVID-19</string>
    <string name="covid_guidance_hub_for_england_description">Read the latest advice and steps you can take to help stop the spread of COVID-19</string>
    <string name="covid_guidance_hub_check_symptoms_title">What to do if you think you have symptoms of COVID-19</string>
    <string name="covid_guidance_hub_check_symptoms_description">Identify the main symptoms of COVID-19</string>
    <string name="covid_guidance_hub_latest_title">What to do if you’re a contact of someone who has COVID-19</string>
    <string name="covid_guidance_hub_latest_description">Advice on staying safe and protecting others if you’re a contact of a positive COVID-19 case</string>
    <string name="covid_guidance_hub_positive_test_result_title">What to do if you have a positive COVID-19 test result</string>
    <string name="covid_guidance_hub_positive_test_result_description">Find out more about the latest guidance for staying at home</string>
    <string name="covid_guidance_hub_travelling_abroad_title">Advice if you’re at high risk from COVID-19</string>
    <string name="covid_guidance_hub_travelling_abroad_description">Guidance on keeping yourself safe if your immune system means you’re at higher risk</string>
    <string name="covid_guidance_hub_check_ssp_title">Latest COVID-19 testing guidance</string>
    <string name="covid_guidance_hub_check_ssp_description">Find out about testing for COVID-19</string>
    <string name="covid_guidance_hub_covid_enquiries_title">Get help with COVID-19 enquiries</string>
    <string name="covid_guidance_hub_covid_enquiries_description">For further information, advice, or support, you can submit a form or call 119</string>
    <string name="exposure_notification_vaccination_status_heading">Your vaccination status</string>
    <string name="exposure_notification_vaccination_status_description">We will only use your answers to check if you may need to self–isolate.</string>
    <string name="exposure_notification_vaccination_status_error_title">Error</string>
    <string name="exposure_notification_vaccination_status_error_description">To continue, you need to select an answer</string>
    <string name="exposure_notification_vaccination_status_all_doses_question">Are you fully vaccinated against COVID-19?</string>
    <string name="exposure_notification_vaccination_status_all_doses_question_description">This means you have had all doses of a UK-approved vaccine.</string>
    <string name="exposure_notification_vaccination_status_all_doses_question_link_text">UK-approved vaccines</string>
    <string name="exposure_notification_vaccination_status_all_doses_question_link_url">https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/coronavirus-vaccine/</string>
    <string name="exposure_notification_vaccination_status_all_doses_yes_content_description">Yes I am fully vaccinated against COVID-19</string>
    <string name="exposure_notification_vaccination_status_all_doses_no_content_description">No I am not fully vaccinated against COVID-19</string>
    <string name="exposure_notification_vaccination_status_date_question">Were you fully vaccinated on or before %s?</string>
    <string name="exposure_notification_vaccination_status_date_yes_content_description">Yes, I received my last dose on or before %s</string>
    <string name="exposure_notification_vaccination_status_date_no_content_description">No I did not receive my last dose on or before %s</string>
    <string name="exposure_notification_vaccination_status_button">Confirm</string>
    <string name="exposure_notification_vaccination_status_all_doses_yes">Yes</string>
    <string name="exposure_notification_vaccination_status_all_doses_no">No</string>
    <string name="exposure_notification_vaccination_status_date_yes">Yes</string>
    <string name="exposure_notification_vaccination_status_date_no">No</string>
    <string name="exposure_notification_clinical_trial_question">Are you taking part in an MHRA-approved COVID-19 vaccine clinical trial?</string>
    <string name="exposure_notification_clinical_trial_yes">Yes</string>
    <string name="exposure_notification_clinical_trial_no">No</string>
    <string name="exposure_notification_clinical_trial_yes_content_description">Yes I am taking part in an MHRA-approved COVID-19 vaccine clinical trial</string>
    <string name="exposure_notification_clinical_trial_no_content_description">No I am not taking part in an MHRA-approved COVID-19 vaccine clinical trial</string>
    <string name="exposure_notification_medically_exempt_question">Are you medically exempt from receiving a COVID-19 vaccine?</string>
    <string name="exposure_notification_medically_exempt_yes">Yes</string>
    <string name="exposure_notification_medically_exempt_no">No</string>
    <string name="exposure_notification_medically_exempt_yes_content_description">Yes I am medically exempt from receiving a COVID-19 vaccine</string>
    <string name="exposure_notification_medically_exempt_no_content_description">No I am not medically exempt from receiving a COVID-19 vaccine</string>
    <string name="exposure_notification_medically_exempt_description">This means you have proof that you are not able to get vaccinated for medical reasons</string>
    <string name="decommissioning_closure_screen_image_content_description">Illustration of a group of people socialising. Some are wearing masks. There is a rainbow behind them</string>
    <string name="decommissioning_closure_screen_header">The app has closed down</string>
    <string name="decommissioning_closure_screen_para">The NHS COVID-19 app has closed down.\n\nPlease continue to follow the latest guidance to protect yourself and others. This includes reporting NHS lateral flow test results on GOV.UK.\n\nIf you’re eligible for COVID-19 treatment, you must report your result so the NHS can contact you about treatment.\n\nThank you for using the app - you’ve helped to keep your community healthy and save lives.</string>
    <string name="decommissioning_closure_screen_url_1_label">Why the NHS COVID-19 app has closed down (opens outside the app on GOV.UK)</string>
    <string name="decommissioning_closure_screen_url_1_link">https://www.gov.uk/government/collections/nhs-covid-19-app</string>
    <string name="decommissioning_closure_screen_url_2_label">England - latest COVID-19 guidance and services (opens outside the app on nhs.uk)</string>
    <string name="decommissioning_closure_screen_url_2_link">https://www.nhs.uk/covid-19-advice-and-services/</string>
    <string name="decommissioning_closure_screen_url_3_label">Wales - latest COVID-19 guidance and services (opens outside the app on GOV.WALES)</string>
    <string name="decommissioning_closure_screen_url_3_link">https://www.gov.wales/guidance-people-symptoms-respiratory-infection-including-covid-19</string>
    <string name="decommissioning_closure_screen_url_4_label">Report an NHS lateral flow test result on GOV.UK (opens outside the app)</string>
    <string name="decommissioning_closure_screen_url_4_link">https://www.gov.uk/report-covid19-result</string>
    <string name="decommissioning_closure_screen_url_5_label">Your app data and privacy (opens outside the app on GOV.UK)</string>
    <string name="decommissioning_closure_screen_url_5_link">https://www.gov.uk/government/publications/nhs-covid-19-app-privacy-information</string>
</resources>