<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <uk.nhs.nhsx.covid19.android.app.widgets.HeadingTextView
        style="@style/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/exposure_notification_vaccination_status_all_doses_question" />

    <TextView
        style="@style/Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/exposure_notification_vaccination_status_all_doses_question_description" />

    <uk.nhs.nhsx.covid19.android.app.widgets.LinkTextView
        android:id="@+id/approvedVaccinesLink"
        style="@style/LinkText.WithIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:text="@string/exposure_notification_vaccination_status_all_doses_question_link_text"
        app:linkUrl="@string/exposure_notification_vaccination_status_all_doses_question_link_url" />

    <uk.nhs.nhsx.covid19.android.app.widgets.BinaryRadioGroup
        android:id="@+id/allDosesBinaryRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:option1ContentDescription="@string/exposure_notification_vaccination_status_all_doses_yes_content_description"
        app:option1Text="@string/exposure_notification_vaccination_status_all_doses_yes"
        app:option2ContentDescription="@string/exposure_notification_vaccination_status_all_doses_no_content_description"
        app:option2Text="@string/exposure_notification_vaccination_status_all_doses_no" />
</LinearLayout>