<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clinicalTrialQuestionContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <uk.nhs.nhsx.covid19.android.app.widgets.HeadingTextView
        android:id="@+id/clinicalTrialQuestion"
        style="@style/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/exposure_notification_clinical_trial_question" />

    <uk.nhs.nhsx.covid19.android.app.widgets.BinaryRadioGroup
        android:id="@+id/clinicalTrialBinaryRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:option1ContentDescription="@string/exposure_notification_clinical_trial_yes_content_description"
        app:option1Text="@string/exposure_notification_clinical_trial_yes"
        app:option2ContentDescription="@string/exposure_notification_clinical_trial_no_content_description"
        app:option2Text="@string/exposure_notification_clinical_trial_no" />
</LinearLayout>